media/styles/manage.css
ul#dsq-tabs li:last-child {
	width: 100px;
}
ul#dsq-tabs li.selected {
	font-weight: bold;
}
ul#dsq-tabs li {
	float: left;
	color: #333;
	padding: 0.25em;
	height: 16px;
	cursor: pointer;
	margin-right: 8px;
	text-align: right;
}

ul#dsq-tabs {
	display: block;
	height: 20px;
	list-style: none;
	margin: 15px 0;
	padding: 0;
	border: 0;
	position: absolute;
	right: 10px;
}

select.disqus-replace {
    border-color: #C6D9E9;
}

.dsq-content h2 {
	line-height: 41px;
	margin: 15px 0 10px;
}

.dsq-alert {
	color: #fff;
	background: #e76c35;
	border: 1px solid #8f3e1c;
	padding: 5px;
}

.dsq-disabled-text {
	color: #e76c35;
	font-weight: 700;
}

.dsq-enabled-text {
	color: #7fbd5a;
	font-weight: 700;
}

